log
Thu 25 Apr 2024 09:18:04 PM UTC: 
 tests:  0|6
total_score: 0/70
75126ea
Thu 25 Apr 2024 09:25:34 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6ca819d
Thu 25 Apr 2024 09:25:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e35bf65
Thu 25 Apr 2024 09:47:45 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
11877af
Thu 25 Apr 2024 09:51:02 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
83ff4a4
Thu 25 Apr 2024 10:10:33 PM UTC: 
 hashmap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
8252be4
Thu 25 Apr 2024 10:20:15 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:89:11: error: unused variable ‘aux’ [-Werror=unused-variable]
   89 |   Pair ** aux = map->buckets;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
8c24195
Fri 26 Apr 2024 01:15:43 AM UTC: 
 hashmap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:60:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   60 |       if (posicion == map->capacity)
      |       ^~
hashmap.c:62:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   62 |         posicion++;
      |         ^~~~~~~~
hashmap.c:72:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |     map->current = pair;
      |                  ^
hashmap.c: In function ‘enlarge’:
hashmap.c:82:11: error: unused variable ‘aux’ [-Werror=unused-variable]
   82 |   Pair ** aux = map->buckets;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
338b7bc
Fri 26 Apr 2024 02:18:18 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:60:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   60 |       if (posicion == map->capacity)
      |       ^~
hashmap.c:62:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   62 |         posicion++;
      |         ^~~~~~~~
hashmap.c:72:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |     map->current = pair;
      |                  ^
hashmap.c: In function ‘enlarge’:
hashmap.c:82:11: error: unused variable ‘aux’ [-Werror=unused-variable]
   82 |   Pair ** aux = map->buckets;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
476b95b
Fri 26 Apr 2024 03:30:47 AM UTC: 
 hashmap.c | 25 ++++++++++++++-----------
 1 file changed, 14 insertions(+), 11 deletions(-)
 tests:  0|0
425e03d
Fri 26 Apr 2024 03:44:08 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
aecfcab
Fri 26 Apr 2024 03:45:14 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
a929792
Fri 26 Apr 2024 03:52:23 AM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|0
80e44d4
Fri 26 Apr 2024 04:14:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
30efd6a
Fri 26 Apr 2024 04:20:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
85a5281
Fri 26 Apr 2024 04:22:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
79f6b48
Fri 26 Apr 2024 04:25:23 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7491d04
Fri 26 Apr 2024 04:28:19 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|3
total_score: 30/70
37d10d4
Fri 26 Apr 2024 04:29:40 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|2
total_score: 40/70
5811b68
Fri 26 Apr 2024 04:39:38 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
6399666
Fri 26 Apr 2024 04:45:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
a4f918b
Fri 26 Apr 2024 06:49:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
59754b7
Fri 26 Apr 2024 10:15:46 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  9|2
total_score: 40/70
e9ad068
Fri 26 Apr 2024 10:16:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
39b8249
Fri 26 Apr 2024 10:19:20 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
2853613
Fri 26 Apr 2024 10:20:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
eb5102c
Fri 26 Apr 2024 10:26:59 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|2
total_score: 40/70
49c829e
Fri 26 Apr 2024 10:27:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
bac059a
Fri 26 Apr 2024 10:48:50 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
4fc7be6
Fri 26 Apr 2024 11:21:35 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|2
total_score: 40/70
3080560
Fri 26 Apr 2024 11:49:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
de00989
Fri 26 Apr 2024 11:50:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
41bc010
Fri 26 Apr 2024 11:52:24 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
4ede323
Fri 26 Apr 2024 11:53:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
8393185
Sat 27 Apr 2024 12:06:30 AM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|2
total_score: 40/70
84a8527
Sat 27 Apr 2024 12:13:18 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
016ac01
Sat 27 Apr 2024 02:07:56 AM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  9|2
total_score: 40/70
669fca4
Sat 27 Apr 2024 02:13:15 AM UTC: 
 hashmap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  9|2
total_score: 40/70
1a65b6c
Sat 27 Apr 2024 02:13:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 50/70
d3d1c49
Sat 27 Apr 2024 02:15:16 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 50/70
6fd743e
Sat 27 Apr 2024 02:16:47 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 50/70
4d8f563
Sat 27 Apr 2024 02:33:11 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 50/70
9220a89
Sat 27 Apr 2024 02:34:59 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 50/70
b4dc1c2
Sat 27 Apr 2024 02:35:18 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfb7f72
